# zzx_rknn

./: .clang-format  .gitignore  LICENSE  README.md
1convert/: convet.py
2infer_py/: infer_yolox.py  tools.py
3_1infer_common/: CMakeLists.txt
3_1infer_common/src/: main.cpp  postprocess.hpp  preprocess.hpp  tools.hpp
3_2infer_zero/: CMakeLists.txt
3_2infer_zero/src/: main.cpp
4faster_infer/: CMakeLists.txt  README.md  package.xml
4faster_infer/msg/: detection_result.msg
4faster_infer/src/: main.cpp
4faster_infer/src/apps/yolov8/: rknn_yolov8_seg.cpp  rknn_yolov8_seg.h  yolov8_postprocess.cpp
4faster_infer/src/apps/yolov8-seg/: rknn_yolov8_seg.h  yolov8_seg_postprocess.cpp  yolov8_seg_postprocess.h
4faster_infer/src/apps/yolox/: rknn_yolox.cpp  rknn_yolox.h  rknn_yolox_thread.cpp  rknn_yolox_thread.h  yolox_postprocess.cpp  yolox_postprocess.h
4faster_infer/src/base/: rknn_infer_base.cpp  rknn_infer_base.h  rknn_infer_base.hpp  rknn_infer_thread_base.h  rknn_infer_thread_base.hpp  tools.hpp
4faster_infer/src/postprocess/: rknn_postprocess.cpp  rknn_postprocess.h
4faster_infer/src/preprocess/: rknn_preprocess.cpp  rknn_preprocess.h
4faster_infer/src/yolox/: rknn_yolox.cpp  rknn_yolox.h  rknn_yolox_thread.cpp  rknn_yolox_thread.h  yolox_tools.hpp
